--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 	<title>hello coursera!</title>
 </head>
 <body>
-<h1>hello coursera!
+<h1>hello coursera! it's a great source
 </h1>
 </body>
 </html>
